# e-ai-brain

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  deps.py
apps/api/app/core/: __init__.py  authorization.py  config.py  (+30 more)
apps/api/tests/: conftest.py  gitlab_fakes.py  requirement_fixtures.py  test_acceptance_test_plans.py  test_agent_budget_governance.py  test_api_contract_completion.py  test_api_entrypoint.py  test_architecture_guardrails.py  test_assistant_chat.py  test_assistant_chat_intents.py  test_assistant_chat_persistence.py  test_assistant_chat_service.py  test_assistant_context_service.py  test_assistant_draft_workbench.py  test_assistant_reference_formatting.py  test_bug_lifecycle_service.py  test_bug_management.py  test_bug_persistence.py  test_code_inspection_governance.py  test_code_review_executor.py  test_code_review_report.py  test_collector_runs.py  test_connection_pool.py  test_crud_completion.py  test_dashboard_cache_service.py  test_dashboard_metrics_service.py  test_database_persistence.py  test_deployment_read_model.py  test_deployment_request_execution.py  test_deployment_rollback.py  test_deployment_rollouts.py  test_deployment_runner_capability.py  test_deployment_safety.py  test_deployment_schemes_api.py  test_deployment_strategy_repository.py  test_devops_gitlab_metrics.py  test_devops_jenkins_releases.py  test_devops_metrics_persistence.py  test_dingtalk_auth.py  test_docker_migration_boundary.py  (+108 more)
(+891 files in other folders)
