[project]
name = "ai-brain-api"
version = "0.1.0"
description = "FastAPI backend for Enterprise AI Brain"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=49.0.0",
  "fastapi>=0.115.0",
  "langgraph>=1.2.2",
  "minio>=7.2.15",
  "psycopg[binary]>=3.2.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
